external-crates/move/crates/move-compiler/tests/move_check/parser/constant_public.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: legacy
  lint: false
---
error[E01003]: invalid modifier
  ┌─ tests/move_check/parser/constant_public.move:3:5
  │
3 │     public const Foo: u64 = 0;
  │     ^^^^^^ Invalid constant declaration. Constants cannot have visibility modifiers as they are always internal
